tdc-gatewayapi/ato2-gateway/namespace.yaml
# Namespace do PLATFORM TEAM — aqui vive o Gateway.
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    team: platform-team
